Yaml/Ingress/Ingress_Configuring_TLS_certificate.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-example-ingress
  labels:
    name: tls-example-ingress
spec:
  tls: # This section is for TLS
  - hosts:
    - myapp.com
    secretName: myapp-secret-tls # TLS certificate name in cluster secret
  rules:
  - host: <Host>
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: <Service>
            port: 
              number: <Port>
