Yaml/Ingress/Ingress_Multiple_Paths_for_same_host.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-fanout-example
  labels:
    name: simple-fanout-example
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: myapp.com # Host
    http:
      paths:
      - pathType: Prefix
        path: "/analytics" # myapp.com/analytics
        backend:
          service:
            name: analytics-service
            port: 
              number: 3000
      - pathType: Prefix
        path: "/shopping" # myapp.com/shopping
        backend:
          service:
            name: shopping-service
            port: 
              number: 8080
