Yaml/Ingress/Ingress_Multiple_domains.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: name-virtual-host
  labels:
    name: name-virtual-host
spec:
  rules:
  - host: analytics.myapp.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: analytics-service
            port: 
              number: 3000
  - host: shopping.myapp.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: shopping-service
            port: 
              number: 8080
